# video_i3d

./: README.md
docs/: README.md
lib/: README.md  apt_packages.txt  git_repos.txt  i3d_requirements.txt
src/: CMakeLists.txt  KW_CopyPaste.py  KW_SelectCutFrames.py  bak_i3dscores.py  bak_mediadata.py  i3d.py  i3d_test_comb.py  i3d_test_framedrop.py  i3d_train_comb.py  i3d_train_framedrop.py  i3dscores.py  imagedata.py  mcnnscores.py  mediadata.py  nfdd-c3d-dryrun.cpp  nfdd-c3d-dryrun.h  nfdd-c3d-main.cpp  nfdd-c3d-main4nist.cpp  nfdd-c3d.cpp  test-batchrun.py  test-dryrun.cpp
test/: Forgery_white_Car_copypaste.json  Forgery_white_Car_selectcutframe.json  expected_output.txt  i3d-iter-312400.index  log.txt  run4nist.sh  test-dryrun.sh  test_kw_kinematics.sh  testvideos.txt  tmp_c3d.prototxt
